--- a/Back-end/pom.xml
+++ b/Back-end/pom.xml
@@ -60,6 +60,14 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+
+
 
     </dependencies>
 
@@ -115,6 +123,7 @@
             </plugin>
         </plugins>
 	</build>
+
 	<repositories>
 		<repository>
 			<id>clojars</id>
